--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -45,6 +45,8 @@ system.user.anonymous.created=익명사용자 계정이 생성되었습니다
 nav.posts=게시판
 nav.products=상품관리
 nav.categories=카테고리관리
+nav.suppliers=공급업체관리
+nav.buyers=고객관리
 nav.signup=회원가입
 nav.login=로그인
 nav.logout=로그아웃
@@ -341,4 +343,54 @@ supplier.validation.description.size=설명은 1000자 이하로 입력해주세
 
 # Navigation Messages
 nav.suppliers=공급업체관리
+
+# Buyer Messages
+buyer.list.title=고객 관리
+buyer.list.description=고객을 등록하고 관리할 수 있습니다.
+buyer.list.empty=등록된 고객이 없습니다.
+buyer.show.title=고객 상세
+buyer.show.description=고객 상세 정보를 확인합니다.
+buyer.new=고객 등록
+buyer.edit=고객 수정
+buyer.activate=활성화
+buyer.deactivate=비활성화
+
+# Buyer Form Sections
+buyer.section.basic=기본 정보
+buyer.section.financial=거래 정보
+
+# Buyer Fields
+buyer.field.companyName=회사명
+buyer.field.businessNumber=사업자등록번호
+buyer.field.contactPerson=담당자
+buyer.field.email=이메일
+buyer.field.phone=전화번호
+buyer.field.address=주소
+buyer.field.creditLimit=신용한도
+buyer.field.discountRate=할인율
+buyer.field.totalOrderAmount=총주문금액
+buyer.field.lastOrderDate=최근주문일
+buyer.field.paymentTerms=결제조건
+buyer.field.description=설명
+buyer.field.status=상태
+
+# Buyer Search
+buyer.search.keyword=검색어
+buyer.search.keyword.placeholder=회사명, 담당자명 검색
+buyer.search.email.placeholder=이메일 검색
+buyer.search.businessNumber.placeholder=사업자등록번호 검색
+
+# Buyer Validation Messages
+buyer.validation.companyName.notblank=회사명을 입력해주세요.
+buyer.validation.companyName.size=회사명은 100자 이하로 입력해주세요.
+buyer.validation.businessNumber.size=사업자등록번호는 20자 이하로 입력해주세요.
+buyer.validation.contactPerson.size=담당자명은 50자 이하로 입력해주세요.
+buyer.validation.email.format=올바른 이메일 주소를 입력해주세요.
+buyer.validation.email.size=이메일은 255자 이하로 입력해주세요.
+buyer.validation.phone.size=전화번호는 20자 이하로 입력해주세요.
+buyer.validation.address.size=주소는 1000자 이하로 입력해주세요.
+buyer.validation.creditLimit.positive=신용한도는 0 이상이어야 합니다.
+buyer.validation.discountRate.positive=할인율은 0 이상이어야 합니다.
+buyer.validation.paymentTerms.size=결제조건은 50자 이하로 입력해주세요.
+buyer.validation.description.size=설명은 1000자 이하로 입력해주세요.
 
