--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -45,6 +45,8 @@ system.user.anonymous.created=Anonymous user account has been created
 nav.posts=Posts
 nav.products=Products
 nav.categories=Categories
+nav.suppliers=Suppliers
+nav.buyers=Buyers
 nav.signup=Sign Up
 nav.login=Login
 nav.logout=Logout
@@ -247,4 +249,54 @@ category.pagination.next=Next
 category.placeholder.name=Enter category name
 category.placeholder.code=CAT-001
 category.placeholder.description=Enter detailed category description
+
+# Buyer Messages
+buyer.list.title=Buyer Management
+buyer.list.description=Register and manage buyers.
+buyer.list.empty=No buyers registered.
+buyer.show.title=Buyer Details
+buyer.show.description=View buyer details.
+buyer.new=Register Buyer
+buyer.edit=Edit Buyer
+buyer.activate=Activate
+buyer.deactivate=Deactivate
+
+# Buyer Form Sections
+buyer.section.basic=Basic Information
+buyer.section.financial=Transaction Information
+
+# Buyer Fields
+buyer.field.companyName=Company Name
+buyer.field.businessNumber=Business Number
+buyer.field.contactPerson=Contact Person
+buyer.field.email=Email
+buyer.field.phone=Phone
+buyer.field.address=Address
+buyer.field.creditLimit=Credit Limit
+buyer.field.discountRate=Discount Rate
+buyer.field.totalOrderAmount=Total Order Amount
+buyer.field.lastOrderDate=Last Order Date
+buyer.field.paymentTerms=Payment Terms
+buyer.field.description=Description
+buyer.field.status=Status
+
+# Buyer Search
+buyer.search.keyword=Keyword
+buyer.search.keyword.placeholder=Search company name, contact person
+buyer.search.email.placeholder=Search email
+buyer.search.businessNumber.placeholder=Search business number
+
+# Buyer Validation Messages
+buyer.validation.companyName.notblank=Please enter company name.
+buyer.validation.companyName.size=Company name must be 100 characters or less.
+buyer.validation.businessNumber.size=Business number must be 20 characters or less.
+buyer.validation.contactPerson.size=Contact person must be 50 characters or less.
+buyer.validation.email.format=Please enter a valid email address.
+buyer.validation.email.size=Email must be 255 characters or less.
+buyer.validation.phone.size=Phone number must be 20 characters or less.
+buyer.validation.address.size=Address must be 1000 characters or less.
+buyer.validation.creditLimit.positive=Credit limit must be 0 or greater.
+buyer.validation.discountRate.positive=Discount rate must be 0 or greater.
+buyer.validation.paymentTerms.size=Payment terms must be 50 characters or less.
+buyer.validation.description.size=Description must be 1000 characters or less.
 
