공급사 완료

--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -175,6 +175,17 @@ product.placeholder.dimensions=예: 10cm x 5cm x 2cm
 # Required field indicator
 required=*
 
+# Common Button Messages
+button.create=등록
+button.update=수정
+button.cancel=취소
+button.back=뒤로가기
+button.edit=수정하기
+button.save=저장
+button.delete=삭제
+button.search=검색
+button.confirm=확인
+
 # Category Messages
 category.list.title=카테고리 관리
 category.list.description=카테고리를 등록하고 관리할 수 있습니다.
@@ -249,57 +260,6 @@ category.placeholder.code=CAT-001
 category.placeholder.description=카테고리에 대한 상세한 설명을 입력하세요
 
 # Supplier Messages
-supplier.list.title=공급업체 관리
-supplier.list.description=공급업체를 등록하고 관리할 수 있습니다.
-supplier.create.title=공급업체 등록
-supplier.create.description=새로운 공급업체를 등록합니다.
-supplier.edit.title=공급업체 수정
-supplier.edit.description=공급업체 정보를 수정합니다.
-supplier.detail.title=공급업체 상세보기
-supplier.detail.description=공급업체의 상세 정보를 확인합니다.
-
-# Supplier Form Labels
-supplier.form.basic.info=기본 정보
-supplier.form.name=업체명
-supplier.form.contactPerson=담당자명
-supplier.form.email=이메일
-supplier.form.phone=전화번호
-supplier.form.address=주소
-supplier.form.description=업체 설명
-supplier.form.status=상태
-
-# Supplier Actions
-supplier.action.create=+ 공급업체 등록
-supplier.action.edit=수정
-supplier.action.activate=활성화
-supplier.action.deactivate=비활성화
-supplier.action.cancel=취소
-supplier.action.list=목록
-supplier.action.detail=상세
-supplier.action.excel.download=엑셀 다운로드
-supplier.search.button=검색
-
-# Supplier Status
-supplier.status.active=활성
-supplier.status.inactive=비활성
-supplier.status.active.state=활성 상태
-supplier.status.inactive.state=비활성 상태
-
-# Supplier Labels
-supplier.label.total.count=총 {0}개의 공급업체
-supplier.label.no.suppliers=등록된 공급업체가 없습니다.
-supplier.label.created.at=등록일
-supplier.label.updated.at=수정일
-
-# Supplier Search
-supplier.search.keyword=검색어
-supplier.search.keyword.placeholder=업체명, 담당자명 검색
-supplier.search.email=이메일
-supplier.search.email.placeholder=이메일 검색
-supplier.search.status=상태
-supplier.search.all=전체
-
-# Supplier Messages
 supplier.message.create.success=공급업체가 성공적으로 등록되었습니다.
 supplier.message.update.success=공급업체가 성공적으로 수정되었습니다.
 supplier.message.activate.success=공급업체가 성공적으로 활성화되었습니다.
@@ -307,37 +267,6 @@ supplier.message.deactivate.success=공급업체가 성공적으로 비활성화
 supplier.confirm.activate=정말 활성화하시겠습니까?
 supplier.confirm.deactivate=정말 비활성화하시겠습니까?
 supplier.message.email.duplicate=이미 사용중인 이메일입니다.
-
-# Supplier Table Headers
-supplier.table.supplier.info=업체정보
-supplier.table.contactPerson=담당자
-supplier.table.contact.info=연락처
-supplier.table.status=상태
-supplier.table.created.date=등록일
-supplier.table.management=관리
-supplier.table.no.suppliers=등록된 공급업체가 없습니다.
-
-# Supplier Pagination
-supplier.pagination.previous=이전
-supplier.pagination.next=다음
-
-# Supplier Placeholders
-supplier.placeholder.name=업체명을 입력하세요
-supplier.placeholder.contactPerson=담당자명을 입력하세요
-supplier.placeholder.email=contact@company.com
-supplier.placeholder.phone=02-1234-5678
-supplier.placeholder.address=업체 주소를 입력하세요
-supplier.placeholder.description=업체에 대한 상세한 설명을 입력하세요
-
-# Supplier Validation Messages
-supplier.validation.name.notblank=업체명을 입력해주세요.
-supplier.validation.name.size=업체명은 100자 이하로 입력해주세요.
-supplier.validation.contactPerson.size=담당자명은 50자 이하로 입력해주세요.
-supplier.validation.email.format=올바른 이메일 주소를 입력해주세요.
-supplier.validation.email.size=이메일은 255자 이하로 입력해주세요.
-supplier.validation.phone.size=전화번호는 20자 이하로 입력해주세요.
-supplier.validation.address.size=주소는 1000자 이하로 입력해주세요.
-supplier.validation.description.size=설명은 1000자 이하로 입력해주세요.
 
 # Navigation Messages
 nav.suppliers=공급업체관리
