--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -175,6 +175,29 @@ product.placeholder.dimensions=e.g.: 10cm x 5cm x 2cm
 # Required field indicator
 required=*
 
+# Common Button Messages
+button.create=Register
+button.update=Update
+button.cancel=Cancel
+button.back=Back
+button.edit=Edit
+button.save=Save
+button.delete=Delete
+button.search=Search
+button.confirm=Confirm
+
+# Supplier Messages
+supplier.message.create.success=Supplier has been created successfully.
+supplier.message.update.success=Supplier has been updated successfully.
+supplier.message.activate.success=Supplier has been activated successfully.
+supplier.message.deactivate.success=Supplier has been deactivated successfully.
+supplier.confirm.activate=Are you sure you want to activate?
+supplier.confirm.deactivate=Are you sure you want to deactivate?
+supplier.message.email.duplicate=This email is already in use.
+
+# Navigation Messages
+nav.suppliers=Suppliers
+
 # Category Messages
 category.list.title=Category Management
 category.list.description=You can register and manage categories.
