--- a/src/main/resources/messages/stock/stock_en.properties
+++ b/src/main/resources/messages/stock/stock_en.properties
@@ -154,6 +154,101 @@ inventory.history=Stock History
 inventory.location=Location
 inventory.supplier=Supplier
 
+# Suppliers
+supplier.title=Supplier Management
+supplier.list.title=Supplier Management
+supplier.list.description=You can register and manage suppliers.
+supplier.create.title=Add Supplier
+supplier.create.description=Register a new supplier.
+supplier.edit.title=Edit Supplier
+supplier.edit.description=Edit supplier information.
+supplier.detail.title=Supplier Details
+supplier.detail.description=View detailed supplier information.
+
+# Supplier Form Labels
+supplier.form.basic.info=Basic Information
+supplier.form.name=Company Name
+supplier.form.contactPerson=Contact Person
+supplier.form.email=Email
+supplier.form.phone=Phone
+supplier.form.address=Address
+supplier.form.description=Company Description
+supplier.form.status=Status
+
+# Supplier Detail Labels
+supplier.detail.name=Company Name
+supplier.detail.contactPerson=Contact Person
+supplier.detail.email=Email
+supplier.detail.phone=Phone
+supplier.detail.address=Address
+supplier.detail.company.description=Description
+supplier.detail.status=Status
+supplier.detail.createdAt=Created At
+supplier.detail.updatedAt=Updated At
+
+# Supplier Actions
+supplier.action.create=+ Add Supplier
+supplier.action.edit=Edit
+supplier.action.activate=Activate
+supplier.action.deactivate=Deactivate
+supplier.action.cancel=Cancel
+supplier.action.list=List
+supplier.action.detail=Details
+supplier.action.excel.download=Excel Download
+supplier.search.button=Search
+
+# Supplier Status
+supplier.status.active=Active
+supplier.status.inactive=Inactive
+supplier.status.active.state=Active State
+supplier.status.inactive.state=Inactive State
+
+# Supplier Labels
+supplier.label.total.count=Total {0} suppliers
+supplier.label.no.suppliers=No suppliers registered.
+supplier.label.created.at=Created At
+supplier.label.updated.at=Updated At
+
+# Supplier Search
+supplier.search.keyword=Keyword
+supplier.search.keyword.placeholder=Search by company name, contact person
+supplier.search.email=Email
+supplier.search.email.placeholder=Search by email
+supplier.search.status=Status
+supplier.search.all=All
+
+# Supplier Table Headers
+supplier.table.supplier.info=Supplier Info
+supplier.table.contact=Contact
+supplier.table.contactPerson=Contact
+supplier.table.contact.info=Contact Info
+supplier.table.status=Status
+supplier.table.created.date=Created Date
+supplier.table.management=Management
+supplier.table.no.suppliers=No suppliers registered.
+
+# Supplier Pagination
+supplier.pagination.previous=Previous
+supplier.pagination.next=Next
+
+# Supplier Placeholders
+supplier.placeholder.name=Enter company name
+supplier.placeholder.contactPerson=Enter contact person name
+supplier.placeholder.email=contact@company.com
+supplier.placeholder.phone=02-1234-5678
+supplier.placeholder.address=Enter company address
+supplier.placeholder.description=Enter detailed company description
+
+# Supplier Validation Messages
+supplier.validation.name.notblank=Please enter company name.
+supplier.validation.name.size=Company name must be 100 characters or less.
+supplier.validation.contactPerson.size=Contact person name must be 50 characters or less.
+supplier.validation.email.format=Please enter a valid email address.
+supplier.validation.email.size=Email must be 255 characters or less.
+supplier.validation.phone.size=Phone number must be 20 characters or less.
+supplier.validation.address.size=Address must be 1000 characters or less.
+supplier.validation.description.size=Description must be 1000 characters or less.
+
 # Orders
 order.title=Order Management
 order.list=Order List
