--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -29,115 +29,8 @@ error.email.duplicate=Email is already in use.
 error.password.mismatch=Passwords do not match.
 error.current.password.invalid=Current password is incorrect.
 
-# Exception Page Messages
-error.page.title.404=Page Not Found
-error.page.title.500=Server Error
-error.page.message.404=Please check if the address you entered is correct.
-error.page.message.500=We apologize for the inconvenience. Please try again later.
-error.actions.home=Home
-error.actions.posts=Posts
-error.actions.back=Back
-
 # System Messages
 system.user.anonymous.created=Anonymous user account has been created
-
-# Navigation Messages
-nav.posts=Posts
-nav.products=Products
-nav.categories=Categories
-nav.signup=Sign Up
-nav.login=Login
-nav.logout=Logout
-nav.profile=Profile
-nav.user.greeting=
-nav.language.ko=한국어
-nav.language.en=English
-main.title=goorm board
-
-# Product Messages
-product.list.title=Product Management
-product.list.description=You can register and manage products.
-product.create.title=Add Product
-product.create.description=Register a new product.
-product.edit.title=Edit Product
-product.edit.description=Edit product information.
-product.detail.title=Product Details
-product.detail.description=View detailed product information.
-
-# Product Form Labels
-product.form.basic.info=Basic Information
-product.form.price.info=Price Information
-product.form.additional.info=Additional Information
-product.form.image.upload=Product Image
-product.form.name=Product Name
-product.form.code=Product Code
-product.form.sku=SKU
-product.form.category=Category
-product.form.supplier=Supplier
-product.form.description=Product Description
-product.form.unit.price=Unit Price
-product.form.unit.cost=Unit Cost
-product.form.unit=Unit
-product.form.status=Status
-product.form.barcode=Barcode
-product.form.weight=Weight (kg)
-product.form.dimensions=Dimensions (W x H x D)
-product.form.image.select=Select Image
-product.form.image.select.new=Select New Image
-product.form.image.current=Current Image
-product.form.image.delete=Delete Image
-product.form.image.help=Supports JPG, PNG, GIF files. (Max 10MB)
-
-# Product Actions
-product.action.create=+ Add Product
-product.action.edit=Edit
-product.action.delete=Delete
-product.action.cancel=Cancel
-product.action.list=List
-product.action.detail=Details
-product.action.excel.download=Excel Download
-product.search.button=Search
-
-# Product Status
-product.status.active=Active
-product.status.inactive=Inactive
-product.status.discontinued=Discontinued
-product.status.sellable=Sellable
-product.status.not.sellable=Not Sellable
-product.status.active.state=Active State
-product.status.inactive.state=Inactive State
-
-# Product Labels
-product.label.total.count=Total {0} products
-product.label.no.products=No products registered.
-product.label.no.image=No Image
-product.label.margin.amount=Margin Amount
-product.label.margin.rate=Margin Rate
-product.label.created.at=Created At
-product.label.updated.at=Updated At
-product.label.inventory.history=Inventory History
-product.label.no.inventory=No inventory history.
-product.label.phase2.note=To be implemented in Phase 2.
-
-# Product Categories
-product.category.all=All
-product.category.electronics=Electronics
-product.category.clothing=Clothing
-product.category.books=Books
-product.category.unclassified=Unclassified
-
-# Product Suppliers
-product.supplier.all=All
-product.supplier.a=Supplier A
-product.supplier.b=Supplier B
-product.supplier.unspecified=Unspecified
-
-# Product Search
-product.search.keyword=Keyword
-product.search.keyword.placeholder=Search by name, code
-product.search.category=Category
-product.search.status=Status
-product.search.all=All
 
 # Product Messages
 product.message.create.success=Product has been created successfully.
@@ -149,31 +42,102 @@ product.message.price.invalid=Unit price must be greater than or equal to unit c
 product.message.price.warning=Unit price is lower than unit cost. Please check the price.
 product.message.upload.error=Image upload failed: {0}
 
-# Product Table Headers
-product.table.product.info=Product Info
-product.table.category=Category
-product.table.price.info=Price Info
-product.table.status=Status
-product.table.created.date=Created Date
-product.table.management=Management
-product.table.no.products=No products registered.
+# Category Messages
+category.message.create.success=Category has been created successfully.
+category.message.update.success=Category has been updated successfully.
+category.message.activate.success=Category has been activated successfully.
+category.message.deactivate.success=Category has been deactivated successfully.
+category.confirm.activate=Are you sure you want to activate?
+category.confirm.deactivate=Are you sure you want to deactivate?
+category.message.code.duplicate=This code is already in use.
 
-# Product Pagination
-product.pagination.previous=Previous
-product.pagination.next=Next
+# Supplier Messages
+supplier.message.create.success=Supplier has been created successfully.
+supplier.message.update.success=Supplier has been updated successfully.
+supplier.message.activate.success=Supplier has been activated successfully.
+supplier.message.deactivate.success=Supplier has been deactivated successfully.
+supplier.confirm.activate=Are you sure you want to activate?
+supplier.confirm.deactivate=Are you sure you want to deactivate?
+supplier.message.email.duplicate=This email is already in use.
 
-# Placeholders
-product.placeholder.name=Enter product name
-product.placeholder.code=PRD-001
-product.placeholder.sku=Stock keeping unit code
-product.placeholder.description=Enter detailed product description
-product.placeholder.price=0.00
-product.placeholder.barcode=8801234567890
-product.placeholder.weight=0.000
-product.placeholder.dimensions=e.g.: 10cm x 5cm x 2cm
+# Supplier Error Messages
+error.supplier.notfound=Supplier not found. ID: {0}
+error.supplier.validation=Supplier validation failed: {0} = {1}
+error.supplier.duplicate=Duplicate supplier information. {0}: {1}
+error.supplier.state=Failed to change supplier status. ID: {0}, Current: {1}, Target: {2}
 
-# Required field indicator
-required=*
+# Error Page Messages
+error.page.title.404=Page Not Found
+error.page.title.500=Server Error
+error.page.message.404=Please check if the address you entered is correct.
+error.page.message.500=We apologize for the inconvenience. Please try again later.
+error.actions.home=Home
+error.actions.posts=Posts
+error.actions.back=Back
+
+# Navigation Messages
+nav.home=Home
+nav.posts=Posts
+nav.products=Products
+nav.categories=Categories
+nav.suppliers=Suppliers
+nav.signup=Sign Up
+nav.login=Login
+nav.logout=Logout
+nav.profile=Profile
+nav.user.greeting=
+nav.language.ko=한국어
+nav.language.en=English
+
+# Main Page Messages
+main.title=goorm board
+main.welcome=Welcome to Goorm Board!
+main.description=A bulletin board made with Spring Boot + Thymeleaf
+main.greeting.hello=Hello
+main.login.message=Login to use more features!
+main.goto.posts=Go to Board
+main.get.started=Get Started
+main.learn.more=Learn More
+
+# Board Messages
+board.title=Board
+board.create=Write Post
+board.list=Post List
+board.detail=Post Detail
+board.edit=Edit Post
+board.delete=Delete Post
+board.author=Author
+board.title.label=Title
+board.content.label=Content
+board.created=Created Date
+board.updated=Updated Date
+board.viewcount=Views
+board.actions=Actions
+board.number=Number
+board.no.posts=No posts available
+board.back.to.list=Back to List
+board.confirm.delete=Are you sure you want to delete?
+
+# Authentication Messages
+auth.signup.title=Sign Up
+auth.login.title=Login
+auth.profile.title=Profile
+auth.email=Email
+auth.password=Password
+auth.password.confirm=Confirm Password
+auth.nickname=Nickname
+auth.current.password=Current Password
+auth.new.password=New Password
+auth.signup.button=Sign Up
+auth.login.button=Login
+auth.logout.button=Logout
+auth.update.profile=Update Profile
+auth.already.member=Already a member?
+auth.not.member=Not a member yet?
+auth.current.info=Current Information
+auth.joined.date=Joined Date
+auth.new.password.optional=New Password (Optional)
+auth.new.password.confirm=Confirm New Password
 
 # Common Button Messages
 button.create=Register
@@ -185,89 +149,11 @@ button.save=Save
 button.delete=Delete
 button.search=Search
 button.confirm=Confirm
-
-# Supplier Messages
-supplier.message.create.success=Supplier has been created successfully.
-supplier.message.update.success=Supplier has been updated successfully.
-supplier.message.activate.success=Supplier has been activated successfully.
-supplier.message.deactivate.success=Supplier has been deactivated successfully.
-supplier.confirm.activate=Are you sure you want to activate?
-supplier.confirm.deactivate=Are you sure you want to deactivate?
-supplier.message.email.duplicate=This email is already in use.
-
-# Navigation Messages
-nav.suppliers=Suppliers
-
-# Category Messages
-category.list.title=Category Management
-category.list.description=You can register and manage categories.
-category.create.title=Add Category
-category.create.description=Register a new category.
-category.edit.title=Edit Category
-category.edit.description=Edit category information.
-category.detail.title=Category Details
-category.detail.description=View detailed category information.
-
-# Category Form Labels
-category.form.basic.info=Basic Information
-category.form.name=Category Name
-category.form.code=Category Code
-category.form.description=Category Description
-category.form.status=Status
-category.form.sort.order=Sort Order
-
-# Category Actions
-category.action.create=+ Add Category
-category.action.edit=Edit
-category.action.activate=Activate
-category.action.deactivate=Deactivate
-category.action.cancel=Cancel
-category.action.list=List
-category.action.detail=Details
-category.action.excel.download=Excel Download
-category.search.button=Search
-
-# Category Status
-category.status.active=Active
-category.status.inactive=Inactive
-category.status.active.state=Active State
-category.status.inactive.state=Inactive State
-
-# Category Labels
-category.label.total.count=Total {0} categories
-category.label.no.categories=No categories registered.
-category.label.created.at=Created At
-category.label.updated.at=Updated At
-
-# Category Search
-category.search.keyword=Keyword
-category.search.keyword.placeholder=Search by name, code
-category.search.status=Status
-category.search.all=All
-
-# Category Messages
-category.message.create.success=Category has been created successfully.
-category.message.update.success=Category has been updated successfully.
-category.message.activate.success=Category has been activated successfully.
-category.message.deactivate.success=Category has been deactivated successfully.
-category.confirm.activate=Are you sure you want to activate?
-category.confirm.deactivate=Are you sure you want to deactivate?
-category.message.code.duplicate=This code is already in use.
-
-# Category Table Headers
-category.table.category.info=Category Info
-category.table.status=Status
-category.table.sort.order=Sort Order
-category.table.created.date=Created Date
-category.table.management=Management
-category.table.no.categories=No categories registered.
-
-# Category Pagination
-category.pagination.previous=Previous
-category.pagination.next=Next
-
-# Category Placeholders
-category.placeholder.name=Enter category name
-category.placeholder.code=CAT-001
-category.placeholder.description=Enter detailed category description
-
+button.submit=Submit
+button.reset=Reset
+button.close=Close
+button.next=Next
+button.previous=Previous
+button.yes=Yes
+button.no=No
+button.view=View
