--- a/src/main/resources/messages/validation/validation_en.properties
+++ b/src/main/resources/messages/validation/validation_en.properties
@@ -40,3 +40,31 @@ validation.nickname.new.placeholder=Enter new nickname
 validation.current.password.placeholder=Enter current password
 validation.new.password.placeholder=Enter new password (leave blank if not changing)
 validation.new.password.confirm.placeholder=Confirm new password
+
+# Product Validation Messages
+product.validation.name.notblank=Product name is required.
+product.validation.name.size=Product name must be 100 characters or less.
+product.validation.code.notblank=Product code is required.
+product.validation.code.size=Product code must be 50 characters or less.
+product.validation.price.min=Price must be 0 or greater.
+product.validation.price.digits=Invalid price format.
+product.validation.description.size=Description must be 1000 characters or less.
+product.validation.barcode.size=Barcode must be 50 characters or less.
+product.validation.weight.min=Weight must be 0 or greater.
+product.validation.dimensions.size=Dimensions must be 100 characters or less.
+
+# Category Validation Messages
+category.validation.name.notblank=Category name is required.
+category.validation.name.size=Category name must be 100 characters or less.
+category.validation.seq.notnull=Category ID is required.
+category.validation.description.size=Description must be 500 characters or less.
+
+# Supplier Validation Messages
+supplier.validation.name.notblank=Supplier name is required.
+supplier.validation.name.size=Supplier name must be 100 characters or less.
+supplier.validation.contactPerson.size=Contact person name must be 50 characters or less.
+supplier.validation.email.format=Invalid email format.
+supplier.validation.email.size=Email must be 255 characters or less.
+supplier.validation.phone.size=Phone number must be 20 characters or less.
+supplier.validation.address.size=Address must be 1000 characters or less.
+supplier.validation.description.size=Description must be 1000 characters or less.
