--- a/src/main/resources/messages/validation/validation_en.properties
+++ b/src/main/resources/messages/validation/validation_en.properties
@@ -68,3 +68,9 @@ supplier.validation.email.size=Email must be 255 characters or less.
 supplier.validation.phone.size=Phone number must be 20 characters or less.
 supplier.validation.address.size=Address must be 1000 characters or less.
 supplier.validation.description.size=Description must be 1000 characters or less.
+
+# Supplier Service Messages
+supplier.service.create.failed=Failed to create supplier.
+supplier.service.update.failed=Failed to update supplier.
+supplier.service.activate.failed=Failed to activate supplier.
+supplier.service.deactivate.failed=Failed to deactivate supplier.
