--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -89,6 +89,10 @@ nav.user.greeting=님
 nav.language.ko=한국어
 nav.language.en=English
 
+# Buyer Navigation Messages
+nav.buyer.dashboard=바이어 대시보드
+nav.buyer.orders=발주 관리
+
 # Main Page Messages
 main.title=goorm board
 main.welcome=Goorm Board에 오신 것을 환영합니다!
