--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -60,6 +60,26 @@ supplier.confirm.activate=Are you sure you want to activate?
 supplier.confirm.deactivate=Are you sure you want to deactivate?
 supplier.message.email.duplicate=This email is already in use.
 
+# Order Messages
+order.message.create.success=Order has been successfully registered.
+order.message.delivery.complete.success=Delivery has been completed.
+order.confirm.delivery.complete=Do you want to complete the delivery?
+
+# Order Error Messages
+error.order.notfound=Order not found.
+error.order.insufficient.stock=Insufficient stock.
+error.order.processing=An error occurred while processing the order.
+error.user.role.invalid=You do not have permission to perform this action.
+error.company.notfound=Company information not found. Please contact administrator.
+
+# Buyer Navigation Messages
+nav.buyer.dashboard=Buyer Dashboard
+nav.buyer.orders=Order Management
+
+# Admin Navigation Messages
+nav.admin.dashboard=Admin Dashboard
+nav.admin.orders=Order Management
+
 # Supplier Error Messages
 error.supplier.notfound=Supplier not found. ID: {0}
 error.supplier.validation=Supplier validation failed: {0} = {1}
