--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -53,9 +53,14 @@ category.confirm.activate=정말 활성화하시겠습니까?
 order.message.create.success=주문이 성공적으로 등록되었습니다.
 order.message.delivery.complete.success=배송이 완료처리되었습니다.
 order.confirm.delivery.complete=배송완료 처리하시겠습니까?
+
+# Order Error Messages
 error.order.notfound=주문을 찾을 수 없습니다.
 error.order.insufficient.stock=재고가 부족합니다.
 error.order.processing=주문 처리 중 오류가 발생했습니다.
+error.order.items.notselected=발주할 상품을 선택해주세요.
+error.user.role.invalid=해당 작업을 수행할 권한이 없습니다.
+error.company.notfound=회사 정보를 찾을 수 없습니다. 관리자에게 문의하세요.
 category.confirm.deactivate=정말 비활성화하시겠습니까?
 category.message.code.duplicate=이미 사용중인 코드입니다.
 
