--- a/src/main/resources/messages/i18n/messages.properties
+++ b/src/main/resources/messages/i18n/messages.properties
@@ -118,6 +118,8 @@ main.description=Spring Boot + Thymeleaf로 만든 게시판입니다
 main.greeting.hello=안녕하세요
 main.login.message=로그인하여 더 많은 기능을 이용하세요!
 main.goto.posts=게시판 보러가기
+main.goto.fetch.login=fetch 로그인 가기
+main.goto.axios.login=axios 로그인 가기
 main.get.started=시작하기
 main.learn.more=자세히 보기
 
