--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -116,6 +116,8 @@ main.description=A bulletin board made with Spring Boot + Thymeleaf
 main.greeting.hello=Hello
 main.login.message=Login to use more features!
 main.goto.posts=Go to Board
+main.goto.fetch.login=Go to fetch Login
+main.goto.axios.login=Go to axios Login
 main.get.started=Get Started
 main.learn.more=Learn More
 
