--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,3 +25,12 @@ auth.login.failed=로그인 실패
 auth.logout.failed=로그아웃 실패
 auth.session.check.failed=세션 확인 실패
 auth.user.unauthenticated=인증되지 않은 사용자
+
+# 메인 페이지 메시지
+main.welcome=Goorm Board에 오신 것을 환영합니다!
+main.description=Spring Boot + Thymeleaf로 만든 게시판입니다.
+main.greeting.hello=안녕하세요
+main.login.message=로그인하여 더 많은 기능을 이용하세요!
+main.goto.posts=게시판 보러가기
+main.goto.fetch.login=Fetch 로그인
+main.goto.axios.login=Axios 로그인
