--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,3 +25,12 @@ auth.login.failed=Login failed
 auth.logout.failed=Logout failed
 auth.session.check.failed=Session check failed
 auth.user.unauthenticated=Unauthenticated user
+
+# Main page messages
+main.welcome=Welcome to Goorm Board!
+main.description=Board application built with Spring Boot + Thymeleaf.
+main.greeting.hello=Hello
+main.login.message=Please login to access more features!
+main.goto.posts=Go to Board
+main.goto.fetch.login=Fetch Login
+main.goto.axios.login=Axios Login
