클라이언트 페이지 추가

--- a/src/main/resources/messages/i18n/messages_en.properties
+++ b/src/main/resources/messages/i18n/messages_en.properties
@@ -118,6 +118,7 @@ main.login.message=Login to use more features!
 main.goto.posts=Go to Board
 main.goto.fetch.login=Go to fetch Login
 main.goto.axios.login=Go to axios Login
+main.goto.jwt.login=Go to jwt Login
 main.get.started=Get Started
 main.learn.more=Learn More
 
